<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fl_sign_in"
    tools:context=".SignInFragment">

    <FrameLayout
        android:id="@+id/fl_sign_in_overlay_bg"
        android:layout_width="340dp"
        android:layout_height="250dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="30dp"
        android:background="@color/october_mist_transparent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="605dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="170dp"
                android:layout_marginEnd="40dp"
                android:hint="@string/et_login_username"
                android:inputType="textEmailAddress"
                android:minHeight="50dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:hint="@string/et_login_password"
                android:inputType="textPassword"
                android:minHeight="50dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <!--    <EditText-->
            <!--        android:id="@+id/et_update_user_id"-->
            <!--        android:layout_width="match_parent"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:layout_marginStart="40dp"-->
            <!--        android:layout_marginEnd="40dp"-->
            <!--        android:hint="User ID to Update" />-->

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/tangerine_orange"
                android:text="@string/btn_login_login"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_new_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:text="@string/tv_login_new_user_create_account"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/tangerine_orange"
                android:text="@string/btn_login_register"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>


</FrameLayout>